<resources>
    <string name="app_name">github-explorer</string>
    <string name="users">Users</string>
    <string name="search_hint">Search users</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="error_no_retry">An error has occurred.</string>
    <string name="error_message">An error has occurred. Please retry.</string>
    <string name="empty_message">No data</string>
    <string name="user_details">User Details</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repositories">Repositories</string>
</resources>